[gd_scene load_steps=3 format=3 uid="uid://bbnias1xayh0n"]

[ext_resource type="PackedScene" uid="uid://dea0uuqitw0mg" path="res://enemy_ships/enemy_three.tscn" id="1_fr3wc"]
[ext_resource type="Script" path="res://enemy_ships/squads/level_three/squad_twelve.gd" id="1_vkq15"]

[node name="SquadTwelve" type="Node2D"]
script = ExtResource("1_vkq15")

[node name="EnemyThree" parent="." instance=ExtResource("1_fr3wc")]
position = Vector2(37, 75)

[node name="EnemyThree2" parent="." instance=ExtResource("1_fr3wc")]
position = Vector2(122, 74)

[node name="EnemyThree3" parent="." instance=ExtResource("1_fr3wc")]
position = Vector2(79, 26)
